# serializer version: 1
# name: test_get_generator_data
  dict({
    'addedBy': None,
    'associatedUsers': list([
      'pete.rage@rage.com',
    ]),
    'batteryVoltageV': 13.9,
    'connectionType': 'Unknown',
    'controllerClockTimestamp': '2025-04-15T07:08:50',
    'controllerTempF': 71.6,
    'coolingType': 'Air',
    'device': dict({
      'address': dict({
        'address1': 'Highway 66',
        'address2': None,
        'city': 'Somewhere',
        'country': 'US',
        'lat': 41.3341111,
        'long': -72.3333111,
        'postalCode': '00000',
        'state': 'CA',
      }),
      'alertCount': 0,
      'controllerType': 'RDC2 (Blue Board)',
      'currentFirmware': 'RDC2.4 3.4.5',
      'dealerOrgs': list([
        dict({
          'address': dict({
            'address1': 'Highway 66',
            'address2': None,
            'city': 'Revisited',
            'country': None,
            'lat': None,
            'long': None,
            'postalCode': '000000',
            'state': 'CA',
          }),
          'adminEmails': list([
            'admin@gmail.com',
          ]),
          'businessPartnerNo': '123456',
          'deviceCount': 71,
          'displayPhoneNumber': '(999) 999-9999',
          'e164PhoneNumber': '+199999999999',
          'id': 123,
          'name': 'Generators R Us',
          'technicianCount': 3,
          'userCount': 4,
          'wizardComplete': True,
          'wizardStep': 'OnboardingComplete',
        }),
      ]),
      'deviceHost': 'Oncue',
      'deviceIpAddress': '1.1.1.1:2402',
      'displayName': 'Generator 1',
      'firmwareVersion': '3.4.5',
      'hasAcceptedPrivacyPolicy': True,
      'hasServiceAgreement': None,
      'id': 12345,
      'isConnected': True,
      'lastConnectedTimestamp': '2025-04-14T09:30:17+00:00',
      'lastMaintenanceTimestamp': '2025-04-10T09:12:59-04:00',
      'macAddress': '00:10:63:20:E1:91',
      'maintenancePeriodDays': 365,
      'model': 'Model20KW',
      'modelDisplayName': '20 KW',
      'nextMaintenanceTimestamp': '2026-04-10T09:12:59-04:00',
      'product': 'Rdc2v4',
      'productDisplayName': 'RDC 2.4',
      'serialNumber': '123MGVHR4567',
      'status': 'ReadyToRun',
      'statusUpdateTimestamp': '2025-04-14T09:29:01+00:00',
      'totalRuntimeHours': 120.2,
    }),
    'engineCompartmentTempF': None,
    'engineCoolantTempF': None,
    'engineFrequencyHz': 0,
    'engineOilPressureOk': True,
    'engineOilPressurePsi': None,
    'engineSpeedRpm': 0,
    'engineState': 'Standby',
    'engineStateDisplayNameEn': 'Standby',
    'exercise': dict({
      'durationMinutes': 20,
      'frequency': 'Weekly',
      'lastEndTimestamp': '2025-04-12T14:19:59+00:00',
      'lastStartTimestamp': '2025-04-12T14:00:00+00:00',
      'mode': 'Unloaded',
      'nextStartTimestamp': '2025-04-19T10:00:00-04:00',
      'runningMode': None,
    }),
    'fuelType': 'LiquidPropane',
    'generatorLoadPercent': 0,
    'generatorLoadW': 0,
    'generatorVoltageAvgV': 0,
    'lastRanTimestamp': '2025-04-12T14:00:00+00:00',
    'loadShed': dict({
      'isConnected': True,
      'parameters': list([
        dict({
          'definitionId': 1,
          'displayName': 'HVAC A',
          'isReadOnly': False,
          'value': False,
        }),
        dict({
          'definitionId': 2,
          'displayName': 'HVAC B',
          'isReadOnly': False,
          'value': False,
        }),
        dict({
          'definitionId': 3,
          'displayName': 'Load A',
          'isReadOnly': False,
          'value': False,
        }),
        dict({
          'definitionId': 4,
          'displayName': 'Load B',
          'isReadOnly': False,
          'value': False,
        }),
        dict({
          'definitionId': 5,
          'displayName': 'Load C',
          'isReadOnly': False,
          'value': False,
        }),
        dict({
          'definitionId': 6,
          'displayName': 'Load D',
          'isReadOnly': False,
          'value': False,
        }),
      ]),
    }),
    'lubeOilTempF': 42.8,
    'pim': dict({
      'isConnected': False,
      'parameters': list([
        dict({
          'definitionId': 7,
          'displayName': 'Digital Output B1 Value',
          'isReadOnly': True,
          'value': False,
        }),
        dict({
          'definitionId': 8,
          'displayName': 'Digital Output B2 Value',
          'isReadOnly': True,
          'value': False,
        }),
        dict({
          'definitionId': 9,
          'displayName': 'Digital Output B3 Value',
          'isReadOnly': False,
          'value': False,
        }),
        dict({
          'definitionId': 10,
          'displayName': 'Digital Output B4 Value',
          'isReadOnly': False,
          'value': False,
        }),
        dict({
          'definitionId': 11,
          'displayName': 'Digital Output B5 Value',
          'isReadOnly': False,
          'value': False,
        }),
        dict({
          'definitionId': 12,
          'displayName': 'Digital Output B6 Value',
          'isReadOnly': False,
          'value': False,
        }),
      ]),
    }),
    'powerSource': 'Utility',
    'remoteResetCounterSeconds': 0,
    'runtimeSinceLastMaintenanceHours': 0.3,
    'serverIpAddress': '2.2.2.2',
    'serviceAgreement': dict({
      'beginTimestamp': None,
      'hasServiceAgreement': None,
      'term': None,
      'termDays': None,
      'termMonths': None,
    }),
    'setOutputVoltageV': 240,
    'switchState': 'Auto',
    'totalOperationHours': 33932.3,
    'totalRuntimeHours': 120.2,
    'utilityVoltageV': 259.7,
  })
# ---
# name: test_get_homes
  list([
    dict({
      'address': dict({
        'address1': 'Highway 66',
        'address2': None,
        'city': 'Somewhere',
        'country': 'US',
        'lat': 41.334111,
        'long': -72.3333111,
        'postalCode': '000000',
        'state': 'CA',
      }),
      'devices': list([
        dict({
          'address': dict({
            'address1': 'Highway 66',
            'address2': None,
            'city': 'Somewhere',
            'country': 'US',
            'lat': 41.334111,
            'long': -72.3333111,
            'postalCode': '000000',
            'state': 'CA',
          }),
          'alertCount': 0,
          'controllerType': 'RDC2 (Blue Board)',
          'currentFirmware': 'RDC2.4 3.4.5',
          'dealerOrgs': list([
            dict({
              'address': dict({
                'address1': 'Highway 66',
                'address2': None,
                'city': 'Revisited',
                'country': None,
                'lat': None,
                'long': None,
                'postalCode': '000000',
                'state': 'CA',
              }),
              'adminEmails': list([
                'admin@gmail.com',
              ]),
              'businessPartnerNo': '123456',
              'deviceCount': 71,
              'displayPhoneNumber': '(999) 999-9999',
              'e164PhoneNumber': '+199999999999',
              'id': 123,
              'name': 'Generators R Us',
              'technicianCount': 3,
              'userCount': 4,
              'wizardComplete': True,
              'wizardStep': 'OnboardingComplete',
            }),
          ]),
          'deviceHost': 'Oncue',
          'deviceIpAddress': '1.1.1.1:2402',
          'displayName': 'Generator 1',
          'firmwareVersion': '3.4.5',
          'hasAcceptedPrivacyPolicy': True,
          'hasServiceAgreement': None,
          'id': 12345,
          'isConnected': True,
          'lastConnectedTimestamp': '2025-04-14T09:30:17+00:00',
          'lastMaintenanceTimestamp': '2025-04-10T09:12:59',
          'macAddress': '00:10:63:20:E1:91',
          'maintenancePeriodDays': 365,
          'model': 'Model20KW',
          'modelDisplayName': '20 KW',
          'nextMaintenanceTimestamp': '2026-04-10T09:12:59',
          'product': 'Rdc2v4',
          'productDisplayName': 'RDC 2.4',
          'serialNumber': '123MGVHR4567',
          'status': 'ReadyToRun',
          'statusUpdateTimestamp': '2025-04-14T09:29:01+00:00',
          'totalRuntimeHours': 120.2,
        }),
      ]),
      'id': 12345,
      'name': 'Generator 1',
      'weatherCondition': 'Mist',
      'weatherTempF': 46.11200000000006,
      'weatherTimePeriod': 'Day',
    }),
  ])
# ---
